# nyc-last-mile

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  justfile
.github/workflows/: rust.yml
data/: synthetic_data.csv  synthetic_test.csv
data/lastmile.db/: 000055.sst  000058.sst  000064.sst  IDENTITY  MANIFEST-000060
data/lastmile_enhanced.db/: 000025.sst  000044.sst  000059.sst  000074.sst  000083.sst  000094.sst  000103.sst  000113.sst  000130.sst  000132.sst  000141.sst  000150.sst  000160.sst  000169.sst  000184.sst  000198.sst  000214.sst  000223.sst  000233.sst  000234.sst  000236.sst  IDENTITY  MANIFEST-000230
data/synthetic_test.db/: 000030.sst  000031.sst  000032.sst  000033.sst  000034.sst  000035.sst  000036.sst  000037.sst  000040.sst  IDENTITY  MANIFEST-000024
deploy/: MCP_CLIENT_CONFIG.md  cloudrun.yaml  deploy.sh
docs/: CLAUDE_DESKTOP_SETUP.md  DEMO_SCRIPT.md  analytics.md  claude-desktop-config.json  core-questions.md  data-origin.md  graph-traversal.md  mcp-graph-tools-proposal.md  mcp-integration-plan.md  synthetic-data-tools.md
proto/lastmile/v1/: analytics.proto
results/: analytics-clustering-results.md  analytics-descriptive-results.md  analytics-diagnostic-results.md  analytics-predictive-results.md  analytics-prescriptive-results.md  demo-carriers-results.md  demo-lanes-results.md  demo-otd-results.md  demo-search-results.md  demo-stats-results.md  perf_baseline_20251204_161156.md  perf_comparison.md  perf_enhanced_20251204_165209.md  vector_benchmark.txt  vector_benchmark_analysis.md
src/: carrier_names.rs  db.rs  db_enhanced.rs  lib.rs  location_names.rs  main.rs  models.rs  zip5_population.rs
src/api/: graph_handlers.rs  grpc.rs  handlers.rs  lastmile.v1.rs  mod.rs  service.rs
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
